Format proposal text

--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -59,7 +59,7 @@ The second one was a collection of scores of the WHR from 2015 to 2019, with dat
 However, we modified these datasets to a significant degree to fit our needs. We cleaned all the WHR datasets to have more consistency regarding the countries portrayed each year and the names of variables, as well as the order in which they appeared in each dataset. We also deleted the region columns in the WHR datasets that had them, because the categorization was not homogeneous across datasets. We also created a new column in each of them called `year`, to be able to bind all WHR datasets into one. Additionally, we had to standardize the names of countries, because yearly there was some discrepancy in how some names were reportes. We also wanted to make sure that both the WHO suicide dataset and the WHR datasets had the same input for country names.
 Because some countries are not recognized by the UN or a big enough number of other nation states, we did exclude them from `whr_2`. However, they can still be viewed in the initial compiled dataset `whr`. In addition to all these changes, we also used the `expand()` function to produce rows of all-time reported countries in all the years from 2015 to 2019, which provided us with information on missing values by country and year. 
 
-In the WHO `suicide` dataset, we deleted severall columns that would not be required for the purposes of our analysis, leaving only `country`, `year`, `sex`, `age_group`, and `suicide_rates`. The original dataset we extracted from kaggle had several different crude suicide rate variables (i.e. numeric, percentage, high estimate, low estimate), but we decided to only consider the `suicide_rates` numeric variable for our analysis. As previously stated, we did standadized country names in the WHO suicide data as well. We also used the `expand()` function to get the missing  values by `country`, `age_group`, `sex`, and `year`. Because different countries reported results in different ways, some of them have summarized values in categories such as "All ages" and "Both sexes", and some have this information only in subdivided categories of "Female", "Male", etc. Expanding the values to show us the "NAs" was important to see how much missing information we had in this dataset. 
+In the WHO `suicide` dataset, we deleted severall columns that would not be required for the purposes of our analysis, leaving only `country`, `year`, `sex`, `age_group`, and `suicide_rates`. The original dataset we extracted from kaggle had several different crude suicide rate variables (i.e. numeric, percentage, high estimate, low estimate), but we decided to only consider the `suicide_rates` numeric variable for our analysis. As previously stated, we did standadized country names in the WHO suicide data as well. We also used the `expand()` function to get the missing  values by `country`, `age_group`, `sex`, and `year`. Because different countries reported results in different ways, some of them have summarized values in categories such as "All ages" and "Both sexes", and some have this information only in subdivided categories of "Female", "Male", etc. Expanding the values to show the "NAs" was important to see how much missing information we had in this dataset. 
 
 We had initial plans to add a new `region` column to the both the WHR and WHO suicide datasets to make geographical analysis. However, due to all the time we spent tidying the data, we did not have enough time to do that so far. We will determine after we get some more visualizations if we still have time to add one more variable to the equation. 
 
