Create whr graphs

--- a/README.Rmd
+++ b/README.Rmd
@@ -171,7 +171,6 @@ Your results with proper output and graphics go in your presentation, this space
 #      country == "Hong Kong S.A.R., China" ~ "Hong Kong", TRUE ~ country))
 #   
 # whr_2 <- subset(whr, !(country %in% c("North Cyprus", "Northern Cyprus", "Somaliland")))
-  
 ```
 
 
@@ -233,13 +232,63 @@ suicide_2 <- suicide %>% dplyr::right_join(suicide_complete)
 
 ## Visualizations
 
-```{r whr-2015-gdp-happiness}
+```{r whr-gdp-happiness}
 whr %>% 
   filter(year %in% c(2015, 2016, 2017, 2018, 2019)) %>%
   ggplot(aes(x = gdp_per_capita, y = happiness_score)) +
   geom_point() +
   geom_smooth(method = "lm") +
-  labs(x = "GDP per capita", y = "Happiness Score", title = "Correlation between GDP per capita and Happiness Score (WHR 2015-2019)") +
+  labs(x = "GDP per capita", y = "Happiness score", title = "Correlation between GDP per capita and happiness score (WHR 2015-2019)") +
+  facet_wrap(~ year, ncol = 2)
+```
+
+```{r whr-social-support-happiness}
+whr %>% 
+  filter(year %in% c(2015, 2016, 2017, 2018, 2019)) %>%
+  ggplot(aes(x = social_support, y = happiness_score)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  labs(x = "Social support", y = "Happiness score", title = "Correlation between social support and happiness score (WHR 2015-2019)") +
+  facet_wrap(~ year, ncol = 2)
+```
+
+```{r whr-life-expectancy-happiness}
+whr %>% 
+  filter(year %in% c(2015, 2016, 2017, 2018, 2019)) %>%
+  ggplot(aes(x = life_expectancy, y = happiness_score)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  labs(x = "Life expectancy", y = "Happiness score", title = "Correlation between life expectancy and happiness score (WHR 2015-2019)") +
+  facet_wrap(~ year, ncol = 2)
+```
+
+```{r whr-freedom-happiness}
+whr %>% 
+  filter(year %in% c(2015, 2016, 2017, 2018, 2019)) %>%
+  ggplot(aes(x = freedom, y = happiness_score)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  labs(x = "Generosity", y = "Happiness score", title = "Correlation between freedom and happiness score (WHR 2015-2019)") +
+  facet_wrap(~ year, ncol = 2)
+```
+
+```{r whr-generosity-happiness}
+whr %>% 
+  filter(year %in% c(2015, 2016, 2017, 2018, 2019)) %>%
+  ggplot(aes(x = generosity, y = happiness_score)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  labs(x = "Generosity", y = "Happiness score", title = "Correlation between generosity and happiness score (WHR 2015-2019)") +
+  facet_wrap(~ year, ncol = 2)
+```
+
+```{r whr-coruption-happiness}
+whr %>% 
+  filter(year %in% c(2015, 2016, 2017, 2018, 2019)) %>%
+  ggplot(aes(x = perceptions_of_corruption, y = happiness_score)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  labs(x = "Perceptions of corruption", y = "Happiness score", title = "Correlation between perceptions of corruption and happiness score (WHR 2015-2019)") +
   facet_wrap(~ year, ncol = 2)
 ```
 
