Edit line codes

--- a/README.Rmd
+++ b/README.Rmd
@@ -10,8 +10,8 @@ output: github_document
 install.packages("tidyverse")
 library(tidyverse)
 library(janitor)
-# install.packages("naniar")
-# install.packages("visdat")
+install.packages("naniar")
+install.packages("visdat")
 ```
 
 ## Summary
@@ -236,12 +236,6 @@ suicide_2 <- suicide %>% dplyr::right_join(suicide_complete)
 ```{r whr-gdp-happiness}
 whr %>% 
   filter(year %in% c(2015, 2016, 2017, 2018, 2019)) %>%
-<<<<<<< HEAD
-  ggplot() +
-  geom_point(aes(x = gdp_per_capita, y = happiness_score)) +
-  geom_smooth(aes(x = gdp_per_capita, y = happiness_score), method = "lm") +
-  labs(x = "GDP per capita", y = "Happiness Score", title = "Correlation between GDP per capita and Happiness Score (WHR 2015-2019)") +
-=======
   ggplot(aes(x = gdp_per_capita, y = happiness_score)) +
   geom_point() +
   geom_smooth(method = "lm") +
@@ -296,7 +290,6 @@ whr %>%
   geom_point() +
   geom_smooth(method = "lm") +
   labs(x = "Perceptions of corruption", y = "Happiness score", title = "Correlation between perceptions of corruption and happiness score (WHR 2015-2019)") +
->>>>>>> 854825234f2f25e151062d5e97642a0f0012fe0b
   facet_wrap(~ year, ncol = 2)
 ```
 
@@ -315,16 +308,34 @@ visdat::vis_miss(whr)
 
 ```{r suicide-vs-GDP-scatter}
  suicide_2 %>%
-  filter(sex == "Both sexes", age_group == "All Ages") %>%
+  filter(sex == "Both sexes",
+         age_group == "All Ages") %>%
   full_join(whr_2, by = join_by(country, year)) %>%
 ggplot() +
-  #geom_point(aes(x = gdp_per_capita, y = suicide_rates)) +
-  geom_miss_point(aes(x = gdp_per_capita, y = suicide_rates, color= happiness_score), alpha = 0.5) +
-  geom_smooth(aes(x = gdp_per_capita, y = suicide_rates), method = "lm") +
-  labs(x = "GDP per capita", y = "Suicide Rates", title = "Correlation between GDP per capita and Suicide Rates (WHR 2015-2019)") +
+  geom_point(aes(x = gdp_per_capita, 
+                 y = suicide_rates)) +
+  geom_miss_point(aes(x = gdp_per_capita, 
+                      y = suicide_rates, 
+                      color = happiness_score), 
+                  alpha = 0.5) +
+  geom_smooth(aes(x = gdp_per_capita, 
+                  y = suicide_rates), 
+              method = "lm") +
+  labs(x = "GDP per capita", 
+       y = "Suicide Rates", 
+       title = "Correlation between GDP per capita and Suicide Rates (WHR 2015-2019)") +
   facet_wrap(~ year, ncol = 2) +
   scale_color_viridis_c()
 ```
+```{r}
+suicide_2 %>%
+  filter(sex == "Both sexes", age_group == "All Ages") %>%
+  full_join(whr_2, by = join_by(country, year))  %>%
+  filter(gdp_per_capita <= 0.5, suicide_rates <= 4)
+```
+
+
+
 
 ## Presentation
 
