--- a/lab-rats.Rmd
+++ b/lab-rats.Rmd
@@ -327,13 +327,13 @@ ggplot() +
   facet_wrap(~ year, ncol = 2) +
   scale_color_viridis_c()
 ```
-```{r}
+
+```{r finding-special-cases}
 suicide_2 %>%
   filter(sex == "Both sexes", age_group == "All Ages") %>%
   full_join(whr_2, by = join_by(country, year))  %>%
   filter(gdp_per_capita <= 0.5, suicide_rates <= 4)
 ```
-
 
 
 
